data/derived/comb/progs/unify/prog3025.ml.out
Characters 6-7:
  0. ** 2;;
        ^
Error: This expression has type int but an expression was expected of type
         float
